feat(#S11P21D109-235): elastic서버 데이터 동기화